# art_style_search

./: .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.claude/: settings.json  settings.local.json
.claude/skills/run-loop/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  gitleaks.yml
src/art_style_search/: CLAUDE.md  __init__.py  __main__.py  _report_css.py  analyze.py  caption.py  caption_sections.py  config.py  contracts.py  evaluate.py  experiment.py  generate.py  hps.py  knowledge.py  loop.py  media.py  models.py  prompt.py  reasoning_client.py  report.py  report_data.py  retry.py  runs.py  scoring.py  state.py  state_codec.py  state_migrations.py  taxonomy.py  types.py  utils.py  verify_metrics.py
src/art_style_search/prompt/: CLAUDE.md  __init__.py  _canon_ops.py  _format.py  _parse.py  experiments.py  initial.py  json_contracts.py  review.py  synthesis.py
src/art_style_search/reporting/: CLAUDE.md  __init__.py  charts.py  document.py  render.py  report.css
src/art_style_search/workflow/: CLAUDE.md  __init__.py  context.py  iteration.py  iteration_context.py  iteration_execution.py  iteration_persistence.py  iteration_proposals.py  policy.py  proposal_recorder.py  services.py  zero_step.py
tests/: conftest.py  test_alignment.py  test_analyze.py  test_architecture_invariants.py  test_canon_ops.py  test_canon_ops_integration.py  test_caption.py  test_caption_sections.py  test_config.py  test_dependencies.py  test_diversity.py  test_evaluate.py  test_evaluate_compliance.py  test_experiment.py  test_generate.py  test_hps.py  test_iteration_proposals.py  test_knowledge.py  test_loop.py  test_loop_e2e.py  test_media.py  test_policy_headroom.py  test_prompt.py  test_proposal_recorder.py  test_reasoning_client.py  test_replicate_gate_orchestration.py  test_report.py  test_resume_budget.py  test_review.py  test_runs.py  test_scoring_adaptive.py  test_scoring_headroom.py  test_scoring_replicate_gate.py  test_scoring_rigor.py  test_short_protocol.py  test_state.py  test_types.py  test_utils_retry.py  test_verify_metrics.py
