[project]
name = "art-style-search"
version = "0.1.0"
description = "Self-improving loop for finding the best prompt to define and follow an art style from reference images"
readme = "README.md"
authors = [
    { name = "Maxim Kruglikov", email = "olfronar@users.noreply.github.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = ["art", "image-generation", "prompt-optimization", "research", "vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.87.0,<1.0",
    "google-genai>=1.51.0,<2.0",
    "Pillow>=10.0.0,<13.0",
    "torch>=2.6.0,<3.0",
    "torchvision>=0.16.0,<1.0",
    "transformers>=4.40.0,<5.0",
    "dreamsim>=0.2.0,<1.0",
    "open-clip-torch>=3.3.0,<4.0",
    "huggingface-hub>=0.36.2,<1.0",
    "simple-aesthetics-predictor>=0.1.2,<1.0",
    "numpy>=1.26.0,<3.0",
    "scipy>=1.11.0,<2.0",
    "scikit-image>=0.22.0,<1.0",
    "python-dotenv>=1.2.2,<2.0",
    "zai-sdk>=0.2.0,<1.0",
    "openai>=1.50.0,<3.0",
    "plotly>=5.20.0,<6.0",
]

[project.urls]
Homepage = "https://github.com/olfronar/art_style_search"
Repository = "https://github.com/olfronar/art_style_search"
Issues = "https://github.com/olfronar/art_style_search/issues"

[project.scripts]
art-style-search = "art_style_search.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
